Revised background for NH video overlay to address contrast issue for accessibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -119,10 +119,7 @@ button:hover {
   color: #fff;
 }
 .font-shadow {
-  text-shadow: 0 0 8px rgba(0,0,0,0.75);
-}
-.font-shadow2 {
-  text-shadow: 0 0 8px #fff;
+  text-shadow: 0 0 8px rgba(0,0,0,1);
 }
 .dk-blue-bg {
   background-color: #003943;
@@ -401,6 +398,10 @@ video#myVideo {
 }
 .title-content h1 {
   font-size: 1.5em;
+  background-color: rgba(0, 0, 0, 0.65);
+  border-radius: 50px;
+  display: inline-block;
+  padding: 10px 30px;
 }
 .title-content p {
   font-size: 1em;
